# humanoid_robotic_book

./: .gitignore  404.html  CHATBOT_INTEGRATION.md  CLAUDE.md  README.md  accessibility-check.js  docusaurus.config.js  extracted_content.json  index.html  opensearch.xml  optimize-images.js  package-lock.json  package.json  requirements.txt  resources.html  retrieval_output_summary.md  search.html  sidebars.js  sitemap.xml  test_pipeline.py  verify-links.js
backend/: .gitignore  README.md  analyze_chunks.py  demonstrate_retrieval.py  extracted_content.json  main.py  pyproject.toml  simulate_pipeline.py  test_agent_complete.py  test_main.py  test_performance.py  test_retrieval.py  test_simple_retrieval.py  validate_agent_responses.py  validate_all_criteria.py  validate_metadata.py  validate_queries.py  validate_relevance.py  validation_summary.md
backend/huggingface_backend/Rag_Chatbot_Deployment/: .gitignore  .huggingface.yml  README.md  pyproject.toml  requirements.txt  setup.sh
backend/huggingface_backend/Rag_Chatbot_Deployment/src/models/: error_models.py
backend/src/: main.py
backend/src/humanoid_robotics_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/models/: agent_models.py
backend/src/services/: retrieval_service.py
backend/tests/: test_metadata_integrity.py  test_payload_validation.py  test_retrieval_contract.py  test_score_validation.py  test_semantic_query.py  test_semantic_relevance.py
backend/tests/contract/: test_agent_contract.py  test_api_contract.py
backend/tests/integration/: test_api_integration.py  test_retrieval_generation.py
backend/tests/unit/: test_ai_agent.py  test_api.py  test_content_grounding.py  test_hallucination_detection.py  test_vector_storage.py
(+349 files in other folders)
